--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
     </header>
 
     <div class="container">
-        <div class="movies">
-            
-        </div>
+        <div class="movies"></div>
+        <div class="modal"></div>
     </div>
 
     <script src="js/app.js"></script>
